2001-01-16  Charles 'Buck' Krasic  <krasic@acm.org>

	* Add alternate definitions of bitfield structs for architectures
	  with big-endian bitfields.

	* Add AC_C_BIGENDIAN to configure.in.

	* Makefile.am tweeks: Add ac_c_bigendian_cross.m4 to
	  AUX_DIST_EXTRA; eliminate duplicate references to header files.

	* Move bitstream_t to dv_types.h.  Remove a few #include
	  "bitstream.h"'s as a result.

	* Make definition swab32() conditional on WORDS_BIGENDIAN.

	* New autoconf macro for testing endianness.  The stock autoconf
	  test doesn't work with cross-compiling, and autoconf generates a
	  warning to that effect.


2001-01-14  Charles 'Buck' Krasic  <krasic@acm.org>

	* Add bgr0 support for kino submitted by Arne Schirmacher
	  <arne@schirmacher.de>.

	* Add command line option interface to playdv, using popt.

	* Add more audio code structure; pre-emphasis, speed detection
	  (only play normal speed audio).

	* Header file re-structuring.  Move types to new dv_types.h;
	  enclose declarations in extern "C" for C++ compatibility;
	  replace leading '_' from preprocessor symbols with 'DV_'
	  prefix.  

	* Add exit() handler to avoid Sys V shmem leak with Xv.  (Still
	  have to do SDL, and gtk).

	* Add _GNU_SOURCE define, enabling large (>2GB) file support.
	
2001-01-08  Charles 'Buck' Krasic  <krasic@acm.org>

	* Add preliminary support for audio.  New files are audio.[ch]
	  which does the unshuffling, and oss.[ch] which is provides an
	  example of playout via the OSS sound API.
 
2000-12-27  Peter Schlaile <udbz@rz.uni-karlsruhe.de>
	* Integrated MMX/ASM-optimizations into the encoder. 
	  (YUV, DCT88, quant)
	  The YUV conversion is 2 bits more accurate than before, the DCT
	  is somewhat less accurate (approximately 1 or 2 bits) so it
	  should be more or less the same as the old C code. Best thing:
	  it is 8 times faster now!
	
2000-12-21  Charles 'Buck' Krasic  <krasic@acm.org>

	* Applied outstanding patch submissions.  The major parts included