@@ -30,3 +30,4 @@ stamp-h
 stamp-h.in
 testbitstream
 testvlc
+libdv.spec
