@@ -34,6 +34,27 @@ The maintainer-mode is if you are on a system that has recent
 autotools installed, and you wish to make changes to the build
 scripts.
 
+The makefile generated by the autotools is very large, so the more
+useful targets don't jump out at you.  Here are a few.
+
+Build a "tar.gz" distribution file:
+
+  make dist 
+
+Build a rpm package file.  This requires you run as root, or you
+setup your ~/.rpmmacros to allow building rpms without root:
+
+  make rpm 
+
+Clean up objects and binaries:
+
+  make clean 
+
+Clean up including files generated by autotools, which should return
+the working directory state to be like it as after a CVS checkout:
+
+  make maintainer-clean 
+
 
 * The autotools book (http://sources.redhat.com/autobook/) recommends
   "bootstrap" instead of autogen.sh.  
