@@ -2,15 +2,25 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(parse.c)
 AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(libdv, 0.1)
+
+RPM_RELEASE=1
+AM_INIT_AUTOMAKE(libdv, 0.2)
+
 AC_CANONICAL_HOST
 AM_MAINTAINER_MODE
 AC_DISABLE_SHARED
 
 dnl Checks for programs.
-CFLAGS="-O2 -g -Wall"
+
 AC_SUBST(CFLAGS)
 AC_PROG_CC
+
+dnl Add -Wall if gcc
+if test "$GCC" = "yes"; then
+   CFLAGS="-Wall -O2"
+fi
+
+
 AC_PROG_INSTALL
 AM_PROG_LIBTOOL
 
@@ -53,6 +63,32 @@ if $use_asm; then
 	esac
 fi
 
+AC_MSG_CHECKING(whether to enable debugging)
+AC_ARG_WITH(debug,
+[  --with-debug[=level]    Enable debugging.
+  --without-debug	  Disable debugging (default). ],
+[
+	case "$with_debug" in
+	     no)
+		AC_MSG_RESULT(no)
+		;;
+	     yes)
+	        AC_MSG_RESULT(yes)
+		AC_DEFINE(DEBUG)		
+		CFLAGS="$CFLAGS -g"
+		;;
+	     *)
+	        AC_MSG_RESULT(DEBUG=$with_debug)
+		AC_DEFINE_UNQUOTED(DEBUG,$with_debug)
+		CFLAGS="$CFLAGS -g"
+	        ;;
+	esac
+ ],
+ [ AC_MSG_RESULT(default=yes)
+   AC_DEFINE(DEBUG)
+   CFLAGS="$CFLAGS -g" ]
+)
+
 AM_CONDITIONAL(HOST_X86, $arch_x86)
 
 dnl Checks for libraries.
@@ -72,24 +108,22 @@ ifdef([AM_PATH_GLIB],[
 ])
 
 ifdef([AM_PATH_GTK],[
-	AM_PATH_GTK(,
-	[
-		AC_DEFINE(HAVE_GTK)
-		LIBS="$LIBS $GTK_LIBS"
-		CFLAGS="$CFLAGS $GTK_CFLAGS"
+	AM_PATH_GTK(,[
+ 		AC_DEFINE(HAVE_GTK) 
+		LIBS="$LIBS $GTK_LIBS" 
+		CFLAGS="$CFLAGS $GTK_CFLAGS" 
 	])
 ])
 
-ifdef([AM_PATH_SDL],[
-	if $use_sdl; then
-      		AM_PATH_SDL(1.1.6,
-		 [
-	              AC_DEFINE(HAVE_SDL)
-	              LIBS="$LIBS $SDL_LIBS"
-	              CFLAGS="$CFLAGS $SDL_CFLAGS"
-		 ])
-	fi
-])
+if $use_sdl; then
+	AC_CHECK_LIB(SDL_Init,SDL,[
+      		 AM_PATH_SDL(1.1.6,[
+			AC_DEFINE(HAVE_SDL) 
+			LIBS="$LIBS $SDL_LIBS" 
+			CFLAGS="$CFLAGS $SDL_CFLAGS"
+		])
+	])
+fi
 
 if $use_xv; then
       AC_CHECK_LIB(Xv,XvQueryAdaptors,)
@@ -120,5 +154,6 @@ AC_FUNC_MMAP
 AC_CHECK_FUNCS(gettimeofday)
 
 AC_SUBST(ac_aux_dir)
+AC_SUBST(RPM_RELEASE)
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT(Makefile libdv.spec)
