@@ -1,0 +1,74 @@
+# Note that this is NOT a relocatable package
+
+Name: @PACKAGE@
+Version: @VERSION@
+Release: @RPM_RELEASE@
+CopyRight: GPL
+Group: Video
+Source: http://download.sourceforge.net/@PACKAGE@/@PACKAGE@-@VERSION@.tar.gz
+URL: http://@PACKAGE@.sourceforge.net/
+BuildRoot: /tmp/@PACKAGE@-@VERSION@-root
+Requires: glib
+Summary: libdv DV software codec
+Packager: Charles 'Buck' Krasic <krasic@acm.org>
+Docdir: /usr/share/doc
+
+%changelog
+
+%description 
+
+The Quasar DV codec (libdv) is a software codec for DV video.  DV is
+the encoding format used by most digital camcorders, typically those
+that support the IEEE 1394 (aka FireWire or i.Link) interface.  libdv
+was developed according to the official standards for DV video, IEC
+61834 and SMPTE 314M.  See http://libdv.sourceforge.net/ for more.
+
+%package devel
+Summary: Libraries, includes and more from libdv
+Group: Development/Libraries
+
+%description devel
+The Quasar DV codec (libdv) is a software codec for DV video.  DV is
+the encoding format used by most digital camcorders, typically those
+that support the IEEE 1394 (aka FireWire or i.Link) interface.  libdv
+was developed according to the official standards for DV video, IEC
+61834 and SMPTE 314M.  See http://libdv.sourceforge.net/ for more.
+
+This is the libraries, include files and other resources you can use
+to incorporate libdv into applications.
+
+%prep
+%setup -n @PACKAGE@-@VERSION@
+
+%build
+# Needed for snapshot releases.
+if [ ! -f configure ]; then
+  ./bootstrap
+fi
+
+./configure --prefix=/usr --without-debug
+make
+
+%install
+rm -rf $RPM_BUILD_ROOT
+mkdir -p $RPM_BUILD_ROOT
+make prefix=$RPM_BUILD_ROOT/usr install
+
+#%post
+#/sbin/ldconfig
+
+%files
+%defattr(-,root,root)
+%doc ChangeLog COPYING README AUTHORS NEWS INSTALL TODO COPYRIGHT
+/usr/bin/playdv
+/usr/bin/encode
+
+%files devel
+%defattr(-, root, root)
+%doc ChangeLog COPYING README AUTHORS NEWS INSTALL TODO COPYRIGHT
+/usr/include/libdv/*
+/usr/lib/lib*.a
+
+%clean
+rm -rf ${RPM_BUILD_ROOT}
+
